# mange-ta-main

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGES_LOG_PRECOMPUTE_ANALYTICS.md  Makefile  README.md  TESTS_COMPONENTS_UTILS_SUMMARY.md  TESTS_SUMMARY.md  app.py  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_preprocessing.py  run_tests.sh  setup.py
.github/workflows/: docs.yml  preprocess-and-deploy.yml  sync-to-huggingface.yml
components/: filters_panel.py  metrics_header.py  nutri_score.py  recipe_card.py  ui_enhanced.py
components/analytics/: README.md  __init__.py  complexity_analysis.py  ingredient_health.py  nutrition_profiling.py  time_analysis.py  utils.py
docs/: app-features.md  cicd.md  data-analytics.md  getting-started.md  index.md  preprocessing.md
docs/reference/: services.md
logs/: .gitkeep
pages/: 01_📖_Détail_recette.py  02_📊_Analyse_des_données.py  03_📊_Profil_Nutrition.py  recipe_detail.py  recipe_detail_a.py  recipe_detail_b.py
preprocessing/: README_TEXT_ENHANCEMENT.md  __init__.py  compute_popularity.py  extract_nutrition.py  gdrive_uploader.py  list_gdrive_files.py  nutrition_scoring.py  prepare_similarity_matrix.py  prepare_vege_recipes.py  preprocess.py  preprocess_utils.py  recipe_descriptions_hybrid.py  text_cleaner.py
services/: data_loader.py  pexels_image_service.py  recommender.py  search_engine.py
src/preprocessing/: nutrition_scoring.py  prepare_similarity_matrix.py  prepare_vege_recipes.py  preprocess.py
tests/: README.md  conftest.py  test_analytics_components.py  test_app_integration.py  test_app_utilities.py  test_basic_validation.py  test_centralized_data_loading.py  test_components.py  test_components_analytics.py  test_components_cards.py  test_components_simple.py  test_components_simplified.py  test_components_ui.py  test_components_ui_fixed.py  test_compute_popularity.py  test_data_loader.py  test_extract_nutrition.py  test_integration_simple.py  test_navigation.py  test_nutrition_scoring.py  test_pages_basic.py  test_pexels_service.py  test_prepare_vege_recipes.py  test_preprocess_utils.py  test_preprocessing_integration.py  test_recipe_descriptions_hybrid.py  test_recipe_detail.py  test_recommender.py  test_search_engine.py  test_services_integration.py  test_stats.py  test_streamlit_components_fixed.py  test_text_cleaner.py  test_utils_secrets.py
utils/: navigation.py  recipe_detail.py  secrets.py  stats.py
