[project]
name = "mange-ta-main"
version = "0.1.0"
description = "Application web de recherche et recommandation de recettes"
authors = [
    {name = "Équipe Mangetamain", email = "contact@mangetamain.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "google-api-python-client>=2.185.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "kagglehub[pandas-datasets]>=0.3.13",
    "matplotlib>=3.10.7",
    "nltk>=3.8.1",
    "pandas>=2.3.3",
    "plotly>=5.17.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "visidata>=3.3",
]

[project.urls]
Homepage = "https://github.com/regkhalil/mange-ta-main"
Repository = "https://github.com/regkhalil/mange-ta-main"
Documentation = "https://github.com/regkhalil/mange-ta-main/wiki"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # basic errors, pyflakes, isort
ignore = ["E501"]  # Ignorer les lignes trop longues (souvent du HTML/CSS inline)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
